@@ -1,3 +1,5 @@
+* Add context to export CSV route
+
 Version 5.6.0 - 2020-05-04
 * Bug fixes (see mercurial logs for details)
 * Call getter function when accessing Function field on unsaved record
